<resources>
    <string name="app_name">Cyanogen Update Tracker</string>
    <string name="launcher_app_name">Update Tracker</string>
    <string name="update">Update</string>
    <string name="update_information_close">Close</string>
    <string name="update_information_cyanogen_os_version">Cyanogen OS Version: %1$s</string>
    <string name="update_information_cyanogen_mod_version">CyanogenMod Version: %1$s</string>
    <string name="update_information_description_not_available" translatable="false">There is no official information about the new features this update provides. Usually, such an update provides bug fixes, performance enhancements, and / or critical security updates for your device.</string>
    <string name="update_information_file_name">File name: %1$s</string>
    <string name="update_information_for">for</string>
    <string name="update_information_header">Update information</string>
    <string name="update_information_header_short">Update info</string>
    <string name="update_information_installed_update">The latest system update is:</string>
    <string name="update_information_last_checked_on">Last checked on: %1$s</string>
    <string name="update_information_latest_available_update">A new system update is available:</string>
    <string name="update_information_no_update_data_available">No update information is available.</string>
    <string name="update_information_system_is_up_to_date">Your system is up to date.</string>
    <string name="update_information_unknown_update_name">Unnamed update for %1$s</string>
    <string name="update_information_version">&#160;version:</string>
    <string name="update_information_view_update_information">View update information</string>
    <string name="server_status_error">Some features do not work.</string>
    <string name="server_status_unreachable">The server can\'t be reached. Try refreshing the page.</string>
    <string name="server_status_warning">Some features may work incorrectly.</string>
    <string name="time_at">at</string>
    <string name="time_today">Today</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading…</string>
    <string name="download_already_downloaded">The update was already downloaded. It is ready to get installed.</string>
    <string name="download_complete">Download complete</string>
    <string name="download_cyanogen_os">Cyanogen OS Version</string>
    <string name="download_description">Cyanogen Update Tracker</string>
    <string name="download_error">Download Error</string>
    <string name="download_error_close">CLOSE</string>
    <string name="download_error_corrupt">The downloaded update is corrupt! Please try downloading it again.</string>
    <string name="download_error_directory">It looks like there is no storage available on your device. If you have an SD card, please make sure your device is not connected to a PC and make sure the SD card is working.</string>
    <string name="download_error_network">A network error occurred while downloading the update. Please make sure your Internet connection works and try downloading it again.</string>
    <string name="download_error_retry">RETRY</string>
    <string name="download_error_sd_card">There is no SD card present in your device. Please insert an SD card into your device. After you have done so, try downloading the update again.</string>
    <string name="download_error_storage">There is insufficient storage space available on your device to download the update. Please remove some files and try downloading it again.</string>
    <string name="download_failed">Download failed</string>
    <string name="download_in_background">Your update will be downloaded in the background…</string>
    <string name="download_paused_unknown">Your download may be stuck. Try re-downloading the update…</string>
    <string name="download_pending">Your download will start soon…</string>
    <string name="download_permissions">Tap Download again to download the update.</string>
    <string name="download_progress_text_hours_remaining">%1$d%%, about %2$d hours remaining</string>
    <string name="download_progress_text_less_than_a_minute_remaining">%1$d%%, less than a minute remaining</string>
    <string name="download_progress_text_minutes_remaining">%1$d%%, about %2$d minutes remaining</string>
    <string name="download_progress_text_one_hour_remaining">%1$d%%, about 1 hour remaining</string>
    <string name="download_progress_text_one_minute_remaining">%1$d%%, about a minute remaining</string>
    <string name="download_progress_text_seconds_remaining">%1$d%%, a few seconds remaining</string>
    <string name="download_progress_text_unknown_time_remaining">%1$d%%, calculating time remaining…</string>
    <string name="download_progress_text_verifying">100%, Verifying file…</string>
    <string name="download_size_megabyte">%1$d MB</string>
    <string name="download_unknown_update_name">Cyanogen OS Update</string>
    <string name="download_verifying">Verifying…</string>
    <string name="download_verifying_error">File is damaged</string>
    <string name="download_verifying_start">Your download will now be verified…</string>
    <string name="download_waiting_for_network">Waiting for a network connection…</string>
    <string name="download_waiting_for_wifi">Waiting for a Wi-Fi connection…</string>
    <string name="download_will_retry_soon">Your download will re-start soon…</string>
    <string name="settings">Settings</string>
    <string name="settings_device">Device</string>
    <string name="settings_entered_incorrectly">Error saving your settings. Please go back and select your device / update method again.</string>
    <string name="settings_explanation_incremental_full_update">An incremental update can only be installed if you were running the latest system software version before this update was released.\n\nA full update can be always be installed - regardless of the current system software version running on your device.</string>
    <string name="settings_explanation_update_methods">Explanation of the update methods</string>
    <string name="settings_header">Choose your device and update method:</string>
    <string name="settings_push">Send me a notification when a:</string>
    <string name="settings_push_from_server">Critical message is available</string>
    <string name="settings_push_new_version">System update is available</string>
    <string name="settings_push_new_device">New device is supported</string>
    <string name="settings_saved">Your settings are automatically saved.</string>
    <string name="settings_server_messages">Show messages in the app when:</string>
    <string name="settings_server_messages_in_app">There\'s news or a warning</string>
    <string name="settings_server_messages_new_app_version">An app update is available</string>
    <string name="settings_system_up_to_date">Hide the download button when:</string>
    <string name="settings_system_hide_when_up_to_date">My system is up to date</string>
    <string name="settings_update_method">Update method</string>
    <string name="faq">FAQ</string>
    <string name="faq_menuitem">FAQ</string>
    <string name="faq_no_network">No connection.</string>
    <string name="faq_no_network_text">You\'ll need a working connection to view the FAQ page.</string>
    <string name="setup">Welcome</string>
    <string name="setup_close_button">start app</string>
    <string name="setup_page_1_title">Welcome to Cyanogen update tracker!</string>
    <string name="setup_page_1_text">This app will allow you to:\n\n- Download the latest system updates for your Cyanogen OS powered device, early after release\n\n-Update a rooted device\n\n- Fix issues that cause updates not to appear on your device\n\n- View what\'s new in the system software you are currently using\n\n- View some technical information about your device\n\nSwipe to the left to continue.</string>
    <string name="setup_page_3_title">Choose your device:</string>
    <string name="setup_page_3_text">The device to receive updates for is usually automatically detected and selected above. If not, select your device above.\n\nSwipe to the left to continue.</string>
    <string name="setup_page_4_title">Choose your update method:</string>
    <string name="setup_page_4_text">Usually, the incremental update is the right choice here, because it offers much faster and smaller downloads.\n\nIf you are using a rooted device, or use a very old Android version (e.g. you want to update from Android 4.4.4 to Android 6.0.1), or don\'t know if you are rooted or on a very old version, select Full update.\n\nSwipe to the left to continue.</string>
    <string name="setup_page_5_title">You are ready to go!</string>
    <string name="setup_page_5_text">Enjoy using this app!\n\nYou can always change your settings later on. To do so: Tap the three dots in the top right corner, and tap on \"Settings\".</string>
    <string name="install">Install</string>
    <string name="install_guide">Install guide</string>
    <string name="install_guide_close_button">Close Installation Guide</string>
    <string name="install_guide_image_description">Contextual image. Please tap on a lower place on the screen to hear the install guide.</string>
    <string name="install_guide_page_1_title">Download the update</string>
    <string name="install_guide_page_1_text">- It\'s recommended to write all steps down, as you\'ll need to power off your device during the installation of the update.\n\n- Press the Download button to start downloading the update.\n\n- The download progress will appear in the app, and as a notification in your notifications screen.\n\n- When the download has finished, you\'ll see a notification with the text \"Download complete\".\n\nIf a download error occurred, open the app and try to downloading the update again. If this doesn\'t work, make sure you have a working connection. Otherwise, contact the developer of the app. You can do this by visiting the \"My apps\" section of the Google Play Store.</string>
    <string name="install_guide_page_2_title">Enter Recovery Mode</string>
    <string name="install_guide_page_2_text">- First, power off your device.\n\n- Then, press both the power and the volume down buttons at the same time.\n\n- Your device will now start in Recovery Mode. Wait until you see the recovery menu on your screen.</string>
    <string name="install_guide_page_3_title">Apply the downloaded update</string>
    <string name="error_unofficial_cm_header">Unofficial CyanogenMod version</string>
    <string name="error_unofficial_cm_text">An unofficial version of CyanogenMod was found on your device.\nThis app only supports devices running official versions of CyanogenMod.\n\nIf you\'d like to install an official CyanogenMod version on your device, tap the button below to navigate to the CyanogenMod download page.\n\nNOTE: Not all devices are supported by CyanogenMod. Some devices only have unofficial CyanogenMod versions available. These devices are not supported in this app.</string>
    <string name="error_unofficial_cm_button_text">CyanogenMod Download Page</string>
    <string name="error_no_cm_header">CyanogenMod is not installed</string>
    <string name="error_no_cm_text">Your device has currently no CyanogenMod or Cyanogen OS ROM installed.\nThis app supports devices running CyanogenMod 10.1 or newer, and Cyanogen OS devices.\n\nIf you\'d like to install CyanogenMod on your device, tap the button below to view the installation instructions.</string>
    <string name="error_no_cm_button_text">CyanogenMod Installation Guide</string>
    <string name="icon">Icon</string>
</resources>