<!-- Unknown CM Version error screen -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateInformationFragmentTop"
    tools:context=".common.activity.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context=".common.activity.MainActivity$PlaceholderFragment">


        <TextView
            android:id="@+id/unknownCMVersionErrorHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/error_no_cm_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/unknownCMVersionErrorImage"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_below="@id/unknownCMVersionErrorHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_error_no_cm"/>

        <TextView
            android:id="@+id/unknownCMVersionErrorText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/error_no_cm_text"
            android:layout_below="@id/unknownCMVersionErrorImage"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/unknownCMVersionErrorActionButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCmInstallationGuideButtonClick"
            android:layout_below="@id/unknownCMVersionErrorText"
            android:layout_centerHorizontal="true"
            android:text="@string/error_no_cm_button_text"/>

    </RelativeLayout>
</ScrollView>
